2009-01-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Merge from trunk (r1804 to r1829).

2009-01-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Merge from trunk (r1752 to r1804).

	Note: this merge doesn't include the following revisions because it
	was made by previous commits:
	    r1766, r1768, r1781, r1783, r1794, r1797, r1799, r1802.

2009-01-19  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* src/translate.erl: Bugfix, ?MYLANG macro returns a list().

2009-01-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_auth_anonymous.erl: Fix accesses to the new #jid opaque
	type.

2009-01-17  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_c2s.erl: Added comments.

2009-01-16  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Merge from trunk (r1734 to r1752).

	Note: this merge doesn't include the following revisions because it
	was made by previous commits:
	    r1737, r1740, r1745, r1747, r1748.

	* src/jlib.hrl: Any deprecated content was removed from jlib.hrl. This
	leaves only the new RSM records.

2009-01-16  Badlop  <badlop@process-one.net>

	* src/mod_privacy.erl: Privacy list items must be processed in the
	specified order (EJAB-848)
	* src/mod_privacy_odbc.erl: Likewise

2009-01-15  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* src/mod_muc/mod_muc.erl, src/mod_muc/mod_muc_room.erl: 
	Store registered nicknames, rooms and domains as binary().
	Use document_to_iolist/1 and iolist_size/1 instead of 
	document_to_list/1.

2009-01-13  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.3.txt: Add release notes

2009-01-13  Mickael Remond  <mremond@process-one.net>

	* src/tls/Makefile.win32: Windows compilation support.
	* src/tls/tls_drv.c: Likewise.
	* src/tls/stdint.h: Likewise.

	* doc/guide.tex: Update Erlang version in Windows compilation
	documentation.

2009-01-13  Badlop  <badlop@process-one.net>

	* src/msgs/pl.po: Fix typo (thanks to Apag0r)(EJAB-844)
